# RustProxy-socks5

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCKER_SETUP.md  Dockerfile  GETTING_STARTED.md  LICENSE  LIMITATIONS_ADDRESSED.md  README.md  TEST_RESULTS.md  USER_MANUAL.md  config.simple.toml  config.toml  demo_config.toml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  start-rustproxy.bat  test_bind_command.ps1  test_concurrent.ps1  test_config.toml  test_socks5.ps1  test_socks5_auth.ps1  test_socks5_bad_auth.ps1  test_socks5_blocked.ps1  test_socks5_client.py  test_udp_associate.ps1
.kiro/specs/socks5-proxy/: design.md  requirements.md  tasks.md
config/: config.prod.toml
docker/: README.md  prometheus.yml
docs/: ADVANCED_ROUTING.md  MANAGEMENT_API.md  METRICS.md
examples/: management_api_demo.rs  metrics_demo.rs  routing_rules_config.toml
scripts/: docker-build.ps1  docker-build.sh  validate-docker.ps1
src/: lib.rs  main.rs  resource.rs  shutdown.rs
src/auth/: manager.rs  mod.rs  types.rs
src/config/: manager.rs  mod.rs  types.rs  watcher.rs
src/connection/: manager.rs  mod.rs
src/management/: api.rs  auth.rs  handlers.rs  mod.rs  server.rs  types.rs
src/metrics/: collector.rs  manager.rs  mod.rs  reporter.rs  server.rs  types.rs
src/protocol/: constants.rs  handler.rs  mod.rs  types.rs
src/relay/: engine.rs  mod.rs  session.rs
src/routing/: acl.rs  chain.rs  geoip.rs  mod.rs  router.rs  rules.rs  smart.rs  types.rs
src/security/: ddos_protection.rs  fail2ban.rs  mod.rs  rate_limiter.rs  secrets.rs
tests/: config_hot_reload_test.rs  echo_server_test.rs  management_api_test.rs  proxy_chaining_test.rs  relay_engine_test.rs  routing_rules_test.rs  smart_routing_test.rs  timeout_test.rs
(+3 files in other folders)
