[package]
name = "rustproxy"
version = "1.0.0"
edition = "2021"
authors = ["[Your Name] <your-email@domain.com>"]
description = "RustProxy - Professional SOCKS5 proxy server with enterprise features"
license = "MIT"
repository = "https://github.com/yourusername/rustproxy"
homepage = "https://github.com/yourusername/rustproxy"
documentation = "https://github.com/yourusername/rustproxy/blob/main/USER_MANUAL.md"
readme = "README.md"
keywords = ["socks5", "proxy", "networking", "security", "enterprise"]
categories = ["network-programming", "web-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
humantime-serde = "1.1"
humantime = "2.1"
uuid = { version = "1.0", features = ["v4"] }
maxminddb = { version = "0.24", optional = true }
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
serde_json = "1.0"
regex = "1.0"
ipnet = "2.9"
base64 = "0.21"
notify = "6.0"
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "auth"] }
hyper = "1.0"
serde_yaml = "0.9"

[features]
default = []
geoip = ["maxminddb"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[[bin]]
name = "rustproxy"
path = "src/main.rs"

[[example]]
name = "metrics_demo"
path = "examples/metrics_demo.rs"

[[example]]
name = "management_api_demo"
path = "examples/management_api_demo.rs"